tests/conformance/fail/types/bool_plus_i32.ny
fn main() {
    let _ = true + 1
}
